--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <!--Web page header-->
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a href="./index.html" class="header-navigation-logo">
             Web<span class="logo-web">Studio</span></a
