--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@
         <a class="footer-logo" href="./index.html">
           Web <span class="footer-logo-web">Studio</span></a
         >
-
         <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
+          Increase the flow of customers and <br />
+          sales for your business with digital <br />marketing & growth
+          solutions.
         </p>
       </div>
     </footer>
