hm3-update-after-checked

--- a/index.html
+++ b/index.html
@@ -122,8 +122,10 @@
                 height="260"
                 alt="Mark Guerrero Product Designer"
               />
-              <h3 class="team-list-title">Mark Guerrero<br /></h3>
-              <p class="team-list-text">Product Designer<br /></p>
+              <div class="team-personal-container">
+                <h3 class="team-list-title">Mark Guerrero<br /></h3>
+                <p class="team-list-text">Product Designer<br /></p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -133,8 +135,10 @@
                 height="260"
                 alt="Tom Ford Frontend Developer"
               />
-              <h3 class="team-list-title">Tom Ford<br /></h3>
-              <p class="team-list-text">Frontend Developer<br /></p>
+              <div class="team-personal-container">
+                <h3 class="team-list-title">Tom Ford<br /></h3>
+                <p class="team-list-text">Frontend Developer<br /></p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -144,8 +148,10 @@
                 height="260"
                 alt="Camila Garcia Marketing"
               />
-              <h3 class="team-list-title">Camila Garcia<br /></h3>
-              <p class="team-list-text">Marketing<br /></p>
+              <div class="team-personal-container">
+                <h3 class="team-list-title">Camila Garcia<br /></h3>
+                <p class="team-list-text">Marketing<br /></p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -155,8 +161,10 @@
                 height="260"
                 alt="Daniel Wilson UI Designer"
               />
-              <h3 class="team-list-title">Daniel Wilson<br /></h3>
-              <p class="team-list-text">UI Designer<br /></p>
+              <div class="team-personal-container">
+                <h3 class="team-list-title">Daniel Wilson<br /></h3>
+                <p class="team-list-text">UI Designer<br /></p>
+              </div>
             </li>
           </ul>
         </div>
@@ -176,8 +184,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-item-title">Banking App</h3>
-              <p class="portfolio-list-iten-text">App</p>
+              <div class="portfolio-card-description">
+                <h3 class="portfolio-list-item-title">Banking App</h3>
+                <p class="portfolio-list-iten-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -187,8 +197,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-item-title">Cashless Payment</h3>
-              <p class="portfolio-list-iten-text">Marketing</p>
+              <div class="portfolio-card-description">
+                <h3 class="portfolio-list-item-title">Cashless Payment</h3>
+                <p class="portfolio-list-iten-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -198,8 +210,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-item-title">Meditation App</h3>
-              <p class="portfolio-list-iten-text">App</p>
+              <div class="portfolio-card-description">
+                <h3 class="portfolio-list-item-title">Meditation App</h3>
+                <p class="portfolio-list-iten-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -209,8 +223,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-item-title">Taxi Service</h3>
-              <p class="portfolio-list-iten-text">Marketing</p>
+              <div class="portfolio-card-description">
+                <h3 class="portfolio-list-item-title">Taxi Service</h3>
+                <p class="portfolio-list-iten-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -220,8 +236,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-item-title">Screen Illustrations</h3>
-              <p class="portfolio-list-iten-text">Design</p>
+              <div class="portfolio-card-description">
+                <h3 class="portfolio-list-item-title">Screen Illustrations</h3>
+                <p class="portfolio-list-iten-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -231,8 +249,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-item-title">Online Courses</h3>
-              <p class="portfolio-list-iten-text">Marketing</p>
+              <div class="portfolio-card-description">
+                <h3 class="portfolio-list-item-title">Online Courses</h3>
+                <p class="portfolio-list-iten-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
